# rencons-cli

./: .gitignore  .pre-commit-config.yaml  README  README.md  pyproject.toml
src/rencons/: config.py  main.py
src/rencons/cli/: __init__.py  app.py  naks.py  templater.py  welder_registry.py
src/rencons/core/: dto.py
src/rencons/core/extractors/: __init__.py  welder_naks_attestation.py
src/rencons/core/interactors/: naks_bot.py  templater.py  wedler_registry.py
src/rencons/infra/telegram/: naks_bot.py
src/rencons/utils/: progress.py
